updated at: 2023-04-25 18:12, VRC_ScanLineShader - ほたての貝殻 - BOOTH

--- a/VRChat/29/1337329.html
+++ b/VRChat/29/1337329.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "DweYTbdkSd3GLikjybequANcdwj52xw7mQsGCVbOO/8="></script>
+    "F5t3TauB1Ekr25OpAxsAfTLBR866l6Q2qNPg8N0zaZI="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRC_ScanLineShader","description":"VRChatでの使用を想定した、走査線風シェーダーです。ブラウン管ディスプレイなどの表現に使用してください。\nワールド座標に対してノイズをかけるので、アバターなどの複雑な形状をしたオブジェクトに適応しても違和感が少ないかと思います。\n\n～規約\n・VRCの仕様変更により本パッケージの機能が使えなくなった場合、製作者は責任を負いません。(可能な限りの対策はします。)\n・著作権は製作者に帰属します。\n・本製品を使って発生した問題に対しては製作者は一切の責任を負いません。\n許可事項\n・改変・解析\n禁止事項\n・迷惑行為等\n\n～連絡先\nTwitter : HHOTATEA_VRC\nDiscord : hhotatea #0333\n何かあればいつでも連絡ください。\n\n【Properties】\nBaseCoordinateSystem : 走査線(縞模様)の座標系をオブジェクト基準かワールド基準か選択できます。\nDirection : 走査線の方向をXYZから選択できます。\nTexture : メインテクスチャです。\nColor : メインカラーです。\nStripe : 走査線の密度です。\nSpeed : 走査線の動くスピードです。\nBrightness : 光の強さです。\nNoisePower : ノイズの強さです。\nNoiseScale : ノイズテクスチャのスケールです。\n\n\n*2019/04/29 配布開始","url":"https://booth.pm/ja/items/1337329","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/4fb745c3-074a-4dd3-a297-3f01ee3312c7/i/1337329/5112aa43-0f92-47e5-ba43-5a114480c304_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="DweYTbdkSd3GLikjybequANcdwj52xw7mQsGCVbOO/8="></script>
+    nonce="F5t3TauB1Ekr25OpAxsAfTLBR866l6Q2qNPg8N0zaZI="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -119,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -162,7 +164,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1337329/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               169
@@ -177,14 +179,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1337329/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               169
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
