--- a/VRChat/63/1336663.html
+++ b/VRChat/63/1336663.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "SKhQkdc1M6bnVMRi5IM/WInewfe3suv6FljGG5dwS3M="></script>
+    "ye5FeSSZPoF1V54kqkM0si9aolUUhUXOeqG2jWx7aPY="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRChat向け　一口ご飯","description":"VRchat向けアクセサリ：イクラとごはんレンゲ・生クリームスプーンデザート\nunityパッケージが入っております\n\n画像はarktoon-shaders-1.0.1.4を使用しています。\nシェーダーは「synqark」様のbooth「https://booth.pm/ja/items/1027997」にて配布されております\n\n必ず事前に上記シェーダーをunity内にインポートしてください。\n（しない場合マテリアルが正常に読み込まれません）","url":"https://booth.pm/ja/items/1336663","offers":{"priceCurrency":"JPY","@type":"Offer","price":"200"},"image":"https://booth.pximg.net/c/620x620/eaae416f-80ca-4582-baa6-17cd5c7d41ab/i/1336663/8af0bbd1-a6b7-4a0b-b4ff-a1ec63939d5c_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="SKhQkdc1M6bnVMRi5IM/WInewfe3suv6FljGG5dwS3M="></script>
+    nonce="ye5FeSSZPoF1V54kqkM0si9aolUUhUXOeqG2jWx7aPY="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1336663/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               106
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1336663/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               106
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
