--- a/VRChat/75/1336375.html
+++ b/VRChat/75/1336375.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "X0lIOcViZwLtRte0KAlkimjmbR0IVowZ8D/zkJSFZTY="></script>
+    "tKkWqpdroStfnYcIeEIee9O+9vV/VmLikhzmi0qElxc="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"Cobbler Shaker and Measuring Jigger","description":"A 3D model of a cobbler shaker, a shaker used to mix Cocktails.\n\n-------------\nTerms of Use\n-------------\nFeel free to use this how you wish. Just don't... \n- resell","url":"https://booth.pm/ja/items/1336375","offers":{"priceCurrency":"JPY","@type":"Offer","price":"250"},"image":"https://booth.pximg.net/c/620x620/f3923c5a-c0f5-4a15-bf57-2b6ea1692a96/i/1336375/b0d422df-8e5d-4f99-a2c7-241f3a8955b1_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="X0lIOcViZwLtRte0KAlkimjmbR0IVowZ8D/zkJSFZTY="></script>
+    nonce="tKkWqpdroStfnYcIeEIee9O+9vV/VmLikhzmi0qElxc="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -153,7 +155,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1336375/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               4
@@ -168,14 +170,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1336375/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               4
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
