--- a/VRChat/30/1126930.html
+++ b/VRChat/30/1126930.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "9K81qZyvL3e6po1JO3P1wmObGVJLmEdqZpiNadw1CtI="></script>
+    "V4ny9vXdbSf5poFGlMkoBsfnbn5LYhpt4QcVmBRkBFw="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRC用　恋人（とか）と一緒だとハートが出るアクセサリ","description":"他人の迷惑にならない様に、時と場所を弁えて使ってください。\n参考動画（https://twitter.com/kazenainannna/status/1068838178633609216）\n\n画像付きの説明PDFを追加しました。","url":"https://booth.pm/ja/items/1126930","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/4367a840-2f6a-4ba3-b547-41699c7045cb/i/1126930/9b2440a3-4223-4711-a1c3-e61074fdf031_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="9K81qZyvL3e6po1JO3P1wmObGVJLmEdqZpiNadw1CtI="></script>
+    nonce="V4ny9vXdbSf5poFGlMkoBsfnbn5LYhpt4QcVmBRkBFw="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1126930/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               434
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1126930/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               434
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
