--- a/VRChat/41/1129441.html
+++ b/VRChat/41/1129441.html
@@ -100,9 +100,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "RP17X4n5gOt4fmO0uWy6ZSC25V7J5CEZxGxTL3JaO+g="></script>
+    "7CQofzUexKlIJCsFhKXZcit0TCz33VVtMCHvfI2TFsQ="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"無料配布！超フルスクラッチお好み焼き(どんどん亭完全監修)","description":"リアルワールドの九州を中心に48店舗（2018/10/10 現在）を展開するお好み焼きレストランどんどん亭さん完全監修の下、作成された超フルスクラッチお好み焼きです。\n写真撮影・画像加工などをどんどん亭【公式】広報部さんにお手伝いいただきました。\n\nお好み焼き代を払いたい方は是非、どんどん亭リアル店舗に足を運んでご支払いください。\nどうしてもリアル店舗に行けない方の代わりは私が行きます。\n\nどんどん亭公式HP\nhttps://www.dondontei.com/\nどんどん亭【公式】広報部\n@dondontei_PR\nどんどん亭研修生　雉玉かえしちゃんVRM\nhttps://3d.nicovideo.jp/works/td43978","url":"https://booth.pm/ja/items/1129441","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"500"},"image":"https://booth.pximg.net/c/620x620/398453f0-c317-488e-9f19-c38eb6274343/i/1129441/2083a82f-556f-4f60-a10e-68389b55328c_base_resized.jpg"}
     </script>
@@ -113,7 +113,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="RP17X4n5gOt4fmO0uWy6ZSC25V7J5CEZxGxTL3JaO+g="></script>
+    nonce="7CQofzUexKlIJCsFhKXZcit0TCz33VVtMCHvfI2TFsQ="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -137,6 +137,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -180,7 +182,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1129441/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               204
@@ -195,14 +197,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1129441/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               204
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
