--- a/VRChat/96/1129496.html
+++ b/VRChat/96/1129496.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "N6mykdlcrz3P2oz+CZsnGZYutKZX0uVWpgLLGOa++sg="></script>
+    "NRnGuqSs8MkP+6flE0i0Tt/i7jJ8c6Ll6AXwMNfBAGw="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRchat向け　宝石セット","description":"＊2018年12月11日追記\nDirectional Lightの無いワールドに対応したshaderを同梱しました。\n\nhttps://chemical15.booth.pm/items/1129368\n↑の商品の宝石のみのバージョンになります\n\n＊2018年12月10日更新\nDirectional Lightの数値が小さいワールドにも対応したshaderを同梱しました。\n\n■サンプル\nwrld_8d431151-a506-489b-b00c-4809f42aca27\nこのIDを\nhttp://teruaki-tsubokura.com/vrchat/\nのページで使用すると、実物を見られるワールドに入れます。\n\n■使い方\nFBXとMaterialが入っています。\nお好みの組み合わせで使ってください。\n\n■禁則事項\n政治的利用\n特定の信条や宗教のための使用\n公序良俗に反する行為\n再配布\nその他製作者が不適切と判断したもの\n\n■やっていい事\n改変\n\nこの製品には　@nD_ntny　様作成のshaderが使われております。\n配布先：https://twitter.com/nD_ntny/status/1013074942626164736","url":"https://booth.pm/ja/items/1129496","offers":{"priceCurrency":"JPY","@type":"Offer","price":"300"},"image":"https://booth.pximg.net/c/620x620/9585a184-fff0-488e-8a9d-612c758951c2/i/1129496/42a66d9a-0ab3-44ec-908e-12f72d38058b_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="N6mykdlcrz3P2oz+CZsnGZYutKZX0uVWpgLLGOa++sg="></script>
+    nonce="NRnGuqSs8MkP+6flE0i0Tt/i7jJ8c6Ll6AXwMNfBAGw="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -159,7 +161,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1129496/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               235
@@ -174,14 +176,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1129496/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               235
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
