--- a/VRChat/55/1129455.html
+++ b/VRChat/55/1129455.html
@@ -73,9 +73,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "KA9vjoZ9eFQhZWRJTYYTYxkCXAqT43s9PUJh5XX8h3c="></script>
+    "Dl2Vq9tvh2Bjxwz+OtoMafr1J/o07CarAPdE39/P464="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"給水用帽子","description":"何のためにあるのか解らない給水用の帽子です。\n自分の好きな飲み物をセットして楽しんでください。\nお酒をセット出来たら今日の主役になれます。\n△590\n\n内容物\n・beerhat.fbx\n・beerhat用テクスチャ\n・おまけデータ（給水用チューブ）","url":"https://booth.pm/ja/items/1129455","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/c4a3cd6b-ee52-4b50-ba9a-4a4bdc690a8e/i/1129455/13757271-ca3b-4ba6-8b18-0a3e7b3a08da_base_resized.jpg"}
     </script>
@@ -89,7 +89,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="KA9vjoZ9eFQhZWRJTYYTYxkCXAqT43s9PUJh5XX8h3c="></script>
+    nonce="Dl2Vq9tvh2Bjxwz+OtoMafr1J/o07CarAPdE39/P464="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -113,6 +113,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -156,7 +158,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1129455/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               55
@@ -171,14 +173,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1129455/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               55
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
