updated at: 2023-04-25 18:15, 適当に召喚しちゃった触手 - 店長のがらくた屋 - BOOTH

--- a/VRChat/66/1128766.html
+++ b/VRChat/66/1128766.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "vAHgPFS3sA6UUEkAKQO05XIW+umddJcXYBq/WC3zUnQ="></script>
+    "qnJPAlWzxwJPIZeU9UJVsQ2fBntWY0Nm1DA8DbNYhtc="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"適当に召喚しちゃった触手","description":"触手です、適当に召喚しちゃったのでポリゴン多くなりましたが吸盤2段分けでボーンが8本入ってます、ウェイトもいい感じだと思います、ダイナミックボーンでぷるぷるになります\n※7288ポリ・テクスチャ無し","url":"https://booth.pm/ja/items/1128766","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/30d611ee-0eda-4ac5-9e8d-4bc31c8a94dc/i/1128766/27709315-9363-4eb1-9e55-d3a7e427dd08_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="vAHgPFS3sA6UUEkAKQO05XIW+umddJcXYBq/WC3zUnQ="></script>
+    nonce="qnJPAlWzxwJPIZeU9UJVsQ2fBntWY0Nm1DA8DbNYhtc="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1128766/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               121
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1128766/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               121
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
