updated at: 2023-04-25 18:16, 【無料】面取りキューブ BeveledCube【UnityPackage】 - M.G.R雑貨店 - BOOTH

--- a/VRChat/16/1127716.html
+++ b/VRChat/16/1127716.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "8HXHd++TWUvkA+iSqsIkEdmFvCkk3W/QtJA+8KdYkrs="></script>
+    "6I1rjoIEf6oorfkBJds6lVz4tbxabmqVFwjM3+rR+Ok="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【無料】面取りキューブ BeveledCube【UnityPackage】","description":"VRCのワールド制作を想定した面取りしたキューブのUnityPackageです。Unityは触れるけどモデリングはちょっと...という方向けです。\n\n△150～386\n\n通常、Unityでワールド制作を簡潔させる場合Cubeなどを使うと思いますが、エッジが効きすぎていて個人的にはあまり好きではありませんでした。そこで今回の配布に至りました。\n\n面取りキューブとQuadなどを組み合わせることで簡易な花壇が作れます。他にも本棚とかも作れると思います。\n\nテクスチャは同梱しておりません。\n\nご自由にお使いください。\n","url":"https://booth.pm/ja/items/1127716","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/da15b300-8632-4664-a059-a7e1fbad1afa/i/1127716/69028a66-1ce1-45b5-9ad0-02a9a37f6e02_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="8HXHd++TWUvkA+iSqsIkEdmFvCkk3W/QtJA+8KdYkrs="></script>
+    nonce="6I1rjoIEf6oorfkBJds6lVz4tbxabmqVFwjM3+rR+Ok="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -118,6 +118,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -161,7 +163,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1127716/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               240
@@ -176,14 +178,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1127716/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               240
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
