updated at: 2023-04-25 18:18, 魔女の帽子 - molumon - BOOTH

--- a/VRChat/97/1126897.html
+++ b/VRChat/97/1126897.html
@@ -70,9 +70,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "dn7XnH0zGwNLUHXtdibgEwxfq3wLtyI2fvOr6PHobqM="></script>
+    "mhZSsnuPUEQ+do1h1JYZYtewK9bxi1pzJ4GRurqfOI4="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"魔女の帽子","description":"先端のリングにボーンが入っています","url":"https://booth.pm/ja/items/1126897","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/ebffffd0-532e-400b-afe2-d3306d212fc5/i/1126897/f2e54375-7cdc-4ee7-868d-8e2403f38670_base_resized.jpg"}
     </script>
@@ -86,7 +86,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="dn7XnH0zGwNLUHXtdibgEwxfq3wLtyI2fvOr6PHobqM="></script>
+    nonce="mhZSsnuPUEQ+do1h1JYZYtewK9bxi1pzJ4GRurqfOI4="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -110,6 +110,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -153,7 +155,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1126897/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               277
@@ -168,14 +170,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1126897/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               277
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
