updated at: 2023-04-25 18:19, 3Dモデル ペストマスク - SOBAKO CRAFT WORKS - BOOTH

--- a/VRChat/98/1124998.html
+++ b/VRChat/98/1124998.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "bQxfPHSCLANm+0c8BnPISmVWgF8HgQWau9wQTjQuw14="></script>
+    "wRm6WOFL5LFd+2Vb+dCPVwZbZwbLleD1pDJsat0ifJo="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"3Dモデル ペストマスク","description":"ペスト医師のマスクです。\n感染症やミーム汚染から身を守りたいあなたに。\n白・黒2種類のテクスチャを用意しております。\n\n△2861\n\nファイル内容物\nModels\n→Plaguemask.fbx\nTexture\n→上記2種類のテクスチャ\nplaguemask.unitypackage\n\n\n再配布、公序良俗に反する利用を禁止します。\n\n製作者twitter:@lon6021","url":"https://booth.pm/ja/items/1124998","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/2a6fd184-8ec5-423a-adfd-b07ddb313ab1/i/1124998/ded2ae0f-1d63-4782-b604-4d8f94db433f_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="bQxfPHSCLANm+0c8BnPISmVWgF8HgQWau9wQTjQuw14="></script>
+    nonce="wRm6WOFL5LFd+2Vb+dCPVwZbZwbLleD1pDJsat0ifJo="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -159,7 +161,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1124998/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               127
@@ -174,14 +176,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1124998/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               127
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
