updated at: 2023-04-25 18:20, CSMetal - ConsoleSoup - BOOTH

--- a/VRChat/20/1124220.html
+++ b/VRChat/20/1124220.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "bTAbBLpcFSubfjfZ65y/TquvgVlceE30M0JZ29JKd80="></script>
+    "pB+LxbPVeIb8Jy5UhCpA2Ah4Uxg/SGkuyAhGROURY28="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"CSMetal","description":"【概要】\nご自由にお使いください。\nShaderの『改変後の再配布』を許可します。\n※改変した際はご連絡いただけると見にいきます！\n\nReflectionProbeの設定をしている場所で綺麗に反射します。\n「Fantasy Syukaijo」とかだと茶色の壁なので反射で茶色になります。\n「坪倉家 | Tsubokura's Home」だとカメラの設定もあり、綺麗に反射されています。\n何も設定がなく、反射しないときはただのTextureの色になります。\n\n【更新履歴】\n〇2018/12/03 - ver1.0.0\n・公開開始\n\n【改変可】【商用可】【アバターサービス利用可】","url":"https://booth.pm/ja/items/1124220","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/e7b87c36-9f3a-4f4c-90ee-32cdd490dac6/i/1124220/0c112bed-503a-41a3-856d-87932a3b2b57_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="bTAbBLpcFSubfjfZ65y/TquvgVlceE30M0JZ29JKd80="></script>
+    nonce="pB+LxbPVeIb8Jy5UhCpA2Ah4Uxg/SGkuyAhGROURY28="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1124220/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               227
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1124220/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               227
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
