updated at: 2023-04-25 18:22, ArmoredPack03　Ver1.1 - 月面平城京 - BOOTH

--- a/VRChat/58/1120458.html
+++ b/VRChat/58/1120458.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "20hGLS3ngINy6XgUxxPxb+0oCwFatpwMV1PfsolBL3A="></script>
+    "RnqqOWA6mKTB1B1txzuqjFGMdb9s6gpNjSwWcxkCZzo="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ArmoredPack03　Ver1.1","description":"DDW-014-SG　開発コード「Aeon」エネルギー散弾銃\nDDW-015-HM　開発コード「Bhaalgorn」噴射加速式槌\nDDW-016-B2　開発コード「Vagabond」試製剣砲\nDDD-017 汎用装甲Type.Y\nDDD-018　ウイングユニット「Stiletto」\nと\nパーティクル向けミサイル５本(AAM4,AIM120,AIM54,AGM84,R37)を提供します。","url":"https://booth.pm/ja/items/1120458","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/64446b0b-9225-4dba-a979-4708b93cc2ef/i/1120458/07ecbea4-e877-476b-9160-5b419708e767_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="20hGLS3ngINy6XgUxxPxb+0oCwFatpwMV1PfsolBL3A="></script>
+    nonce="RnqqOWA6mKTB1B1txzuqjFGMdb9s6gpNjSwWcxkCZzo="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1120458/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               543
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1120458/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               543
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
