updated at: 2023-04-25 18:23, AlphaPenShader - こおりみずのおもちゃ箱 - BOOTH

--- a/VRChat/35/1116435.html
+++ b/VRChat/35/1116435.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "tVgHdakjF7hncUhGI+LElT7+Ebhl/ZQDNdcW40hDiRc="></script>
+    "Fo6btsDmSugVjd1PGegZ1FuG6lsW4kfcX3pmKIVpw8c="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"AlphaPenShader","description":"ダランディさんのアルファマップテクスチャ(https://darandy.booth.pm/items/1109858)\nが恰好よかったので、VRChatでペンに良い感じに付けるためのシェーダを作りました\nSneilMarker等に付属のマテリアルをつけてお使いください\n\nサンプルも同梱してありますが、説明下手なのであまり参考にならないかもしれません\n\n【内容物】\n・unitypackage(下記が含まれます)\n　シェーダ本体\n　サンプル\n　　プレハブ\n　　テクスチャ\n　　マテリアル\n\n説明書・説明画像\n\n改変、商用利用、アバターやワールドへの同梱可\n再配布不可","url":"https://booth.pm/ja/items/1116435","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/8eae0ce3-7d8e-4436-9710-ea35a9636d4c/i/1116435/704a224c-b1ac-4661-b8d8-757a0cd56540_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="tVgHdakjF7hncUhGI+LElT7+Ebhl/ZQDNdcW40hDiRc="></script>
+    nonce="Fo6btsDmSugVjd1PGegZ1FuG6lsW4kfcX3pmKIVpw8c="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,10 +160,10 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1116435/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              1328
+                              1330
                             </div>
                           </div></a><a class=
                           "remove-from-wish-list no-underline !text-current"
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1116435/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              1328
+                              1330
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
