updated at: 2023-04-25 18:24, fbxモデル ｢Sabre」ver1.11 - Store*Snowlight - BOOTH

--- a/VRChat/14/1116214.html
+++ b/VRChat/14/1116214.html
@@ -100,9 +100,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "JeQY//mrBb0s4yX9L25VLX6dZtcARjid0unULxZKnUE="></script>
+    "TqXuQFtaq8tFETiO7ip0N0zFnyGcsQXz0yu7uj6LkG0="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"fbxモデル ｢Sabre」ver1.11","description":"The English explanation is at the bottom of this page.\n\n本製品は、fbx形式の3D武器モデルです。\nUnityでの利用を想定しておりますが、Blender等にインポートすることで別形式に変換することも可能です。","url":"https://booth.pm/ja/items/1116214","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/bb487ead-0245-44f1-9e26-22a99b59aed0/i/1116214/133f73ef-c05d-4b84-b42e-8b0dff3556f9_base_resized.jpg"}
     </script>
@@ -113,7 +113,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="JeQY//mrBb0s4yX9L25VLX6dZtcARjid0unULxZKnUE="></script>
+    nonce="TqXuQFtaq8tFETiO7ip0N0zFnyGcsQXz0yu7uj6LkG0="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -141,6 +141,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -184,10 +186,10 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1116214/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              123
+                              124
                             </div>
                           </div></a><a class=
                           "remove-from-wish-list no-underline !text-current"
@@ -199,14 +201,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1116214/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              123
+                              124
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
